src/objects/WSONE__DutchLeadGenerationSchedule__c.object
<CustomObject>
    <fields>
        <fullName>WSONE__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE__ChangedSinceLastRun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Changed Since Last Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE__ChangedSince__c</fullName>
        <label>Changed Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WSONE__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WSONE__EconomicallyActive__c</fullName>
        <label>Economically Active</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>active</fullName>
                </value>
                <value>
                    <fullName>inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WSONE__EmployeesMaximum__c</fullName>
        <label>Employees Maximum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WSONE__EmployeesMinimum__c</fullName>
        <label>Employees Minimum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WSONE__FilterType__c</fullName>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Postcode</fullName>
                </value>
                <value>
                    <fullName>Province</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WSONE__FilterValues__c</fullName>
        <label>Filter Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WSONE__FinancialStatus__c</fullName>
        <label>Financial Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>dip</fullName>
                </value>
                <value>
                    <fullName>bankrupt</fullName>
                </value>
                <value>
                    <fullName>solvent</fullName>
                </value>
                <value>
                    <fullName>insolvent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WSONE__Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WSONE__LastRun__c</fullName>
        <label>Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WSONE__LegalForms__c</fullName>
        <label>Legal Forms</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WSONE__Mapping__c</fullName>
        <label>Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE__NewSinceLastRun__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Since Last Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE__NewSince__c</fullName>
        <label>New Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WSONE__NumberToImport__c</fullName>
        <label>Number to Import</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WSONE__SBICodes__c</fullName>
        <label>SBI Codes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WSONE__SBIMatchType__c</fullName>
        <label>SBI Match type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WSONE__Time__c</fullName>
        <label>Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WSONE__UsePrimarySBI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Primary SBI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WSONE__Weekdays__c</fullName>
        <label>Weekdays</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dutch Lead Generation Schedule</label>
    <listViews>
        <fullName>WSONE__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Dutch Lead Generation Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dutch Lead Generation Schedule Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>